--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,8 @@ body {
     justify-content: space-between;
     padding: 1.5rem 3.5rem;
     /* background-color: var(--bg-color); */
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-  } */
+    /* box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  } */ 
 
   /* nav h1 {
     color: var(--primary-color);
